--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,25 +8,26 @@
 
 
 
-@phdthesis{merloj2025dissertation,
+@phdthesis{merlo2025dissertation,
 	abbr = {PhD Dissertation},
 	abstract = {Antenna arrays have become an essential piece of modern life enabling applications from high bandwidth mobile communications to radar and earth remote sensing by providing high directivity and electronically controllable beam patterns. Traditionally, these arrays have been assembled using antenna elements with fixed locations, coupled via fixed radio frequency (RF) transmission lines to a central processing location. In recent years, demands for more resilient versatile multifunction antenna arrays have spurred interest in wirelessly coordinated coherent distributed antenna arrays (CDAs) wherein individual elements or groups of elements (i.e., subarrays), referred to as nodes, can be moved freely relative to one another with the RF signals being generated and digitized on node and processed in a partially- or fully-decentralized manner. This provides CDAs with several distinct advantages over traditional fixed arrays: due to the mobility of the elements, the element locations can be reconfigured based on the desired beam pattern for a given operating mode and frequency; nodes may join and leave the array in an ad-hoc manner allowing array deployments over time and graceful degradation upon node failure; and because each node provides its own power source, the overall array gain scales as N2 as opposed to N for conventional arrays, enabling high bandwidth communication and high sensitivity sensing with lower system power handling requirements on any single node. While these advantages are significant, the challenge of wirelessly coordinating the electrical states---time, frequency, and phase---of each element to a sub-wavelength level remains an area of ongoing research. Generally, these arrays can be implemented in a ``closed-loop'' configuration where the array elements receive feedback from a cooperative receiver node in a communications-type application, or in an ``open-loop'' configuration where the nodes directly coordinate their states amongst themselves, enabling communication with conventional, noncooperative communications terminals as well as radar and remote sensing operations where the destination is typically passive.In this work, I present a system for high-accuracy coordination of the RF electrical states for CDA nodes consisting of commercial off-the-shelf (COTS) software-defined radios (SDRs). I will discuss a computationally-efficient high-accuracy time and phase synchronization technique which utilizes spectrally-sparse waveforms to minimize spectrum utilization while simultaneously maximizing the lower-bound on accuracy and a multi-stage refinement technique to achieve synchronization on the order of picoseconds. Furthermore, I will discuss a new high-accuracy frequency syntonization technique based on the high-accuracy synchronization method which estimates and compensates for the platform oscillator frequency offsets using temporally-sparse timing estimates. This technique provides advantages over previous techniques in that it is tolerant to relative motion, multipath, and non-line-of-sight (NLoS); it is necessarily both spectrally- and temporally-sparse which directly provides high-accuracy; and it is fully-digital and can be directly implemented on existing COTS SDR hardware without requiring voltage tunable oscillators. Finally, I will demonstrate several applications of CDAs ranging from collaborative beamforming which operates similar to conventional phased arrays to long-baseline interferometry which utilizes the spatial sparsity of the antenna elements to perform direct measurements of a scene in the spatial frequency domain.},
-	author = {Merlo, Jason M.},
-	date-modified = {2025-08-09 12:50:12 -0400},
+	address = {East Lansing, MI, USA},
+	author = {Merlo,Jason M.},
+	date-modified = {2025-12-08 12:24:14 -0500},
 	isbn = {9798290927442},
 	journal = {ProQuest Dissertations and Theses},
 	keywords = {Clock synchronization; Distributed antenna arrays; Beamforming; Software-defined radio; Radio frequency; Electrical engineering; Computer engineering; Electromagnetics; Communication; 0607:Electromagnetics; 0459:Communication; 0544:Electrical engineering; 0464:Computer Engineering},
 	language = {English},
 	pages = {219},
-	school = {Michigan State University},
+	school = {Electrical and Computer Engineering, Michigan State University},
 	title = {Wirelessly Coordinated Open-Loop Coherent Distributed Antenna Arrays Using Software-Defined Radio},
-	proquest-url = {https://www.proquest.com/dissertations-theses/wirelessly-coordinated-open-loop-coherent/docview/3236317751/se-2},
+	type = {{PhD} dissertation},
 	year = {2025},
 	bibtex_show = {true},
 	url = {https://doi.org/doi:10.25335/zv14-gf48},
+	proquest-url = {https://www.proquest.com/dissertations-theses/wirelessly-coordinated-open-loop-coherent/docview/3236317751/se-2},
 	doi = {10.25335/zv14-gf48},
-	selected = {true},
-	bdsk-url-1 = {https://www.proquest.com/dissertations-theses/wirelessly-coordinated-open-loop-coherent/docview/3236317751/se-2}}
+	selected = {true},}
 
 @ARTICLE{shandi2025jmw,
   author={Shandi, Naim and Merlo, Jason M. and Nanzer, Jeffrey A.},
