--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -40,9 +40,11 @@
   volume={5},
   number={5},
   pages={1094-1106},
+  arxiv={2505.13248},
   ieee={https://doi.org/10.1109/JMW.2025.3601036},
   keywords={Wireless communication;Phased arrays;Time-frequency analysis;Accuracy;Array signal processing;Wireless networks;Receiving antennas;Microwave antenna arrays;Topology;Synchronization;Consensus averaging;distributed antenna arrays;distributed beamforming;distributed collaborative beamforming;distributed phased arrays;synchronization;wireless networks},
   doi={10.1109/JMW.2025.3601036}}
+
 
 
 @inproceedings{merlo2025apsursi,
@@ -77,6 +79,23 @@
 	bibtex_show={true},
 	title = {Collaborative Beamforming for Communication Applications Using a Two-Element Fully-Wireless Open-Loop Coherent Distributed Array},
 	year = {2025}}
+
+@INPROCEEDINGS{colonberrios2025ims,
+  abbr={IEEE IMS},
+  abstract={We present a novel three-dimensional (3D) imaging technique that integrates active incoherent millimeter-wave (AIM) imaging with pulse compression based on the transmission of pseudo-incoherent signals. This method utilizes four noise transmitters, three emitting continuous random noise and the fourth emitting a known pulsed noise signal, combined with a sparse interferometric receiver array. AIM imaging utilizes the spatial and temporal incoherence of received signals to sample scene information in the Fourier domain and reconstruct images in the azimuth and elevation dimensions. By applying pulse compression using the known noise pulse signal, we achieve enhanced down-range resolution as well. We describe the concept and demonstrate cross-range Fourier domain imaging along with down-range pulse compression-based ranging through simulations. We demonstrate the method experimentally using a 38 GHz imaging system generating 2-dimensional cross-range imagery via Fourier domain processing and down-range imagery based on pulse compression of the transmitted noise pulse.},
+  author={Colon-Berrios, Jorge R. and Merlo, Jason M. and Nanzer, Jeffrey A.},
+  booktitle={IEEE/MTT-S International Microwave Symposium}, 
+  title={Three-Dimensional Fourier Domain Millimeter-Wave Imaging Using Incoherent Active Illumination and Pulse Compression}, 
+  year={2025},
+  month={June},
+  volume={},
+  number={},
+  pages={101-104},
+  ieee={https://ieeexplore.ieee.org/abstract/document/11103855},
+  bibtex_show={True},
+  keywords={Microwave measurement;Image coding;Three-dimensional displays;Azimuth;Transmitters;Noise;Millimeter wave technology;Millimeter wave measurements;Imaging;Spatial resolution;millimeter-wave imaging;noise signals;three-dimensional imaging;pulse compression},
+  doi={10.1109/IMS40360.2025.11103855}}
+
 
 @article{colonberrios2025threedimensionalmillimeterwaveimagingusing,
       abbr = {Preprint},
